syntax = "proto3";

package yandex.cloud.events.serverless.containers;

import "google/protobuf/duration.proto";
import "google/protobuf/field_mask.proto";
import "google/rpc/status.proto";
import "yandex/cloud/access/access.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/serverless/containers;containers";
option java_package = "yandex.cloud.api.events.serverless.containers";
option java_outer_classname = "ContainerEvents";

message CreateContainer {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  ContainerEventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  events.Response response = 9;

  message RequestParameters {
    string folder_id = 1 [(required) = true];
    string name = 2;
    map<string, string> labels = 4;
  }
}

message UpdateContainer {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  ContainerEventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  events.Response response = 9;

  message RequestParameters {
    string container_id = 1 [(required) = true];
    string name = 2;
    map<string, string> labels = 4;
    google.protobuf.FieldMask update_mask = 5;
  }
}

message DeleteContainer {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  ContainerEventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  events.Response response = 9;

  message RequestParameters {
    string container_id = 1 [(required) = true];
  }
}

message DeployContainerRevision {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  events.Response response = 9;

  message EventDetails {
    string container_id = 1 [(required) = true];
    string container_revision_id = 2;
    string container_name = 3;
    string container_revision_status = 4;
    Resources resources = 5 [(required) = true];
    google.protobuf.Duration execution_timeout = 6;
    string service_account_id = 7;
    ImageSpec image_spec = 8 [(required) = true];
    int64 concurrency = 9;
  }

  message RequestParameters {
    string container_id = 1 [(required) = true];
    Resources resources = 5 [(required) = true];
    google.protobuf.Duration execution_timeout = 6;
    string service_account_id = 7;
    ImageSpec image_spec = 8 [(required) = true];
    int64 concurrency = 9;
  }
}

message SetContainerAccessBindings {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  events.Response response = 9 [(required) = true];

  message EventDetails {
    string container_id = 1 [(required) = true];
    string container_name = 2;
    string container_status = 3 [(required) = true];
    repeated access.AccessBinding access_bindings = 4;
    repeated access.AccessBindingDelta access_binding_deltas = 5;
  }
  message RequestParameters {
    string container_id = 1 [(required) = true];
    repeated access.AccessBinding access_bindings = 2;
  }
}

message UpdateContainerAccessBindings {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  events.Response response = 9 [(required) = true];

  message EventDetails {
    string container_id = 1 [(required) = true];
    string container_name = 2;
    string container_status = 3 [(required) = true];
    repeated access.AccessBinding access_bindings = 4;
    repeated access.AccessBindingDelta access_binding_deltas = 5;
  }
  message RequestParameters {
    string container_id = 1 [(required) = true];
    repeated access.AccessBindingDelta access_binding_deltas = 2;
  }
}

message RollbackContainer {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  events.Response response = 9;

  message EventDetails {
    string container_id = 1 [(required) = true];
    string container_revision_id = 2;
    string container_name = 3;
    string container_status = 4;
  }

  message RequestParameters {
    string container_id = 1 [(required) = true];
    string container_revision_id = 2 [(required) = true];
  }
}

message ContainerEventDetails {
  string container_id = 1 [(required) = true];
  string container_name = 2;
  string container_status = 3;
}

message Resources {
  int64 memory = 1;
  int64 cores = 2;
  int64 core_fraction = 3;
}

message Command {
  repeated string command = 1;
}

message Args {
  repeated string args = 1;
}

message ImageSpec {
  string image_url = 1 [(required) = true];
  Command command = 2;
  Args args = 3;
  map<string, string> environment = 4;
  string working_dir = 5;
  int64 size = 6;
  string hash = 7;
}
